--- a/src/views/admin/edit-profile.html
+++ b/src/views/admin/edit-profile.html
@@ -53,6 +53,14 @@
 
             <p style="color: red">Informe a palavra passe antiga!</p>
 
+            {elseif="$status_code === 14"}
+
+            <p style="color: red">Preencha devidamente os campos!</p>
+
+            {elseif="$status_code === 15"}
+
+            <p style="color: red">Contacto ou Email inválido</p>
+
             {else}
 
             <p style="color: red">Ocorreu um erro, tente novamente!</p>
@@ -291,18 +299,6 @@
     } else {
       contacValidateError.style.display = "none";
     }
-
-    // if (passwordValidate.value && !conformPasswordValidate.value) {
-    //   passValidateError.style.display = "block";
-    //   confirmPassValidateError.style.display = "block";
-    //   passValidateError.innerHTML = "Insira a nova password";
-    //   confirmPassValidateError.innerHTML = "Insira a nova password";
-
-    //   return false;
-    // } else {
-    //   passValidateError.style.display = "none";
-    //   confirmPassValidateError.style.display = "none";
-    // }
 
     if (
       !passwordRegEx.exec(passwordValidate.value) ||
