list provider products, product details, create product

--- a/src/views/admin/add-product.html
+++ b/src/views/admin/add-product.html
@@ -3,7 +3,7 @@
 <section id="add-produtos">
   <div class="container">
     <form
-      action="#"
+      action="/bioloOnline/add"
       method="post"
       class="needs-validation"
       enctype="multipart/form-data"
@@ -24,12 +24,34 @@
         />
         <div class="invalid-feedback">Selecione uma imagem</div>
       </div>
+      {if="$status_code !== 0"} {if="$status_code === 200"}
+
+      <p style="color: green">Cadastrado com sucesso!</p>
+
+      {elseif="$status_code === 23000"}
+
+      <p style="color: red">Produto já existe!</p>
+
+      {elseif="$status_code === 12"}
+
+      <p style="color: red">Coloque um preço verdadeiro</p>
+
+      {elseif="$status_code === 403"}
+
+      <p style="color: red">Selecione imagem do produto!</p>
+
+      {else}
+
+      <p style="color: red">Ocorreu um erro, tente novamente!</p>
+
+      {/if} {/if}
       <div class="form-row">
         <div class="col-md-12 mb-3">
           <label for="validationCustom02">Nome do produto</label>
           <input
             type="text"
             name="name"
+            style="color: white"
             class="form-control"
             id="validationCustom02"
             placeholder="Nome do produto"
@@ -44,7 +66,7 @@
           <label for="validationCustom02">Descrição do produto</label>
           <textarea
             name="description"
-            style="height: 110px"
+            style="height: 110px; color: white"
             class="form-control"
             id="validationCustom02"
             placeholder="Descrição do produto"
@@ -69,9 +91,9 @@
             background: #2a2d3a;
           "
         >
-          <option value="">Minhas Categorias</option>
-          <option value="1">Roupas</option>
-          <option value="2">Calsados</option>
+          {loop="$categories"}
+          <option value="{$value.id}">{$value.nome}</option>
+          {/loop}
         </select>
       </div>
 
@@ -80,7 +102,8 @@
           <label for="validationCustom02">Preço do produto</label>
           <input
             type="text"
-            name="name"
+            name="price"
+            style="color: white"
             class="form-control"
             id="validationCustom02"
             pattern="/^([1-9][0-9]{,2}(,[0-9]{3})*|[0-9]+)(\.[0-9]{1,9})?$/"
@@ -88,6 +111,24 @@
             required
           />
           <div class="invalid-feedback">Digite o preço do produto</div>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="col-md-12 mb-3">
+          <label
+            for="isActive"
+            style="cursor: pointer; display: inline-flex; align-items: center"
+          >
+            <input
+              type="checkbox"
+              name="state"
+              id="isActive"
+              style="margin-right: 0.4rem"
+            />
+
+            Permitir visualização
+          </label>
         </div>
       </div>
 
