--- a/src/views/admin/edit-profile.html
+++ b/src/views/admin/edit-profile.html
@@ -7,7 +7,7 @@
       <div class="cadastrar">
         <div class="form">
           <form
-            action="edit"
+            action="/bioloOnline/edit"
             method="post"
             class="needs-validation"
             enctype="multipart/form-data"
