--- a/src/views/admin/login-admin.html
+++ b/src/views/admin/login-admin.html
@@ -1,7 +1,7 @@
 {include="../shared/doc/_documentHeadOpen"}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a href="home" class="navbar-brand logo">
+  <a href="/bioloOnline/" class="navbar-brand logo">
     <img
       src="/bioloOnline/src/assets/images/logo-44x44.png"
       class="img-responsive"
@@ -24,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto"></ul>
     <span class="navbar-text">
-      <a href="home">Back to home</a>
+      <a href="/bioloOnline/home">Back to home</a>
     </span>
   </div>
 </nav>
@@ -35,7 +35,7 @@
       <div class="login">
         <div class="form">
           <form
-            action="login-admin"
+            action="/bioloOnline/login-admin"
             method="post"
             class="needs-validation"
             novalidate
@@ -111,9 +111,9 @@
               Entrar
             </button>
 
-            <a href="create-account" style="margin-left: 8px">Criar conta</a>
+            <a href="/bioloOnline/create-account" style="margin-left: 8px">Criar conta</a>
             <br /><br />
-            <a href="login">Entrar como comprador</a>
+            <a href="/bioloOnline/login">Entrar como comprador</a>
           </form>
         </div>
       </div>
