--- a/src/views/admin/register-admin.html
+++ b/src/views/admin/register-admin.html
@@ -36,7 +36,7 @@
       <div class="cadastrar">
         <div class="form">
           <form
-            action="admin-create"
+            action="/bioloOnline/admin-create"
             method="post"
             class="needs-validation"
             enctype="multipart/form-data"
@@ -202,11 +202,11 @@
               Cadastrar
             </button>
 
-            <a href="create-client" style="margin-left: 8px"
+            <a href="/bioloOnline/create-client" style="margin-left: 8px"
               >Criar conta cliente</a
             >
 
-            <a href="login-admin" style="margin-left: 8px">Login</a>
+            <a href="/bioloOnline/login-admin" style="margin-left: 8px">Login</a>
           </form>
         </div>
       </div>
