--- a/src/views/provider.html
+++ b/src/views/provider.html
@@ -1,10 +1,6 @@
 {include="shared/Header/header"}
 <!------------PRODUTOS------------------->
-<section
-  id=""
-  class=""
-  style="margin-top: 20px !important; margin-bottom: 0px"
->
+<section id="" class="" style="margin-top: 20px !important; margin-bottom: 0px">
   <div class="container">
     <div class="lista-produtos">
       <div class="row jj">
@@ -38,71 +34,87 @@
           <option value="2">Calsados</option>
         </select>
       </div>
-     <!------------PRODUTOS------------------->
-<section id="vendedor"  style="margin-top: 10px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3" >
-                <span class="activo">1</span>
-                <img src="src/assets/images/img-scroll/1.jpg" />
-                <div class="online"></div>
-                <a class="nome-vendedor" href="profile-provider">Osvaldo Cariege</a>
-                <span>2.99</span> 
+      <!------------PRODUTOS------------------->
+      <section id="vendedor" style="margin-top: 10px">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <span class="activo">1</span>
+              <img src="src/assets/images/img-scroll/1.jpg" />
+              <div class="online"></div>
+              <a class="nome-vendedor" href="profile-provider"
+                >Osvaldo Cariege</a
+              >
+              <span>2.99</span>
             </div>
             <div class="col-md-3">
-                <span class="activo">1</span>
-                <img src="src/assets/images/img-scroll/1.jpg" />
-                <div class="online"></div>
-                <a class="nome-vendedor" href="profile-provider">Osvaldo Cariege</a>
-                <span>2.99</span> 
+              <span class="activo">1</span>
+              <img src="src/assets/images/img-scroll/1.jpg" />
+              <div class="online"></div>
+              <a class="nome-vendedor" href="profile-provider"
+                >Osvaldo Cariege</a
+              >
+              <span>2.99</span>
             </div>
             <div class="col-md-3">
-                <span class="activo">1</span>
-                <img src="src/assets/images/img-scroll/1.jpg" />
-                <div class="online"></div>
-                <a class="nome-vendedor" href="profile-provider">Osvaldo Cariege</a>
-                <span>2.99</span> 
+              <span class="activo">1</span>
+              <img src="src/assets/images/img-scroll/1.jpg" />
+              <div class="online"></div>
+              <a class="nome-vendedor" href="profile-provider"
+                >Osvaldo Cariege</a
+              >
+              <span>2.99</span>
             </div>
             <div class="col-md-3">
-                <span class="activo">1</span>
-                <img src="src/assets/images/img-scroll/1.jpg" />
-                <div class="online"></div>
-                <a class="nome-vendedor" href="profile-provider">Osvaldo Cariege</a>
-                <span>2.99</span> 
+              <span class="activo">1</span>
+              <img src="src/assets/images/img-scroll/1.jpg" />
+              <div class="online"></div>
+              <a class="nome-vendedor" href="profile-provider"
+                >Osvaldo Cariege</a
+              >
+              <span>2.99</span>
             </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <span class="activo">1</span>
+              <img src="src/assets/images/img-scroll/1.jpg" />
+              <div class="online"></div>
+              <a class="nome-vendedor" href="profile-provider"
+                >Osvaldo Cariege</a
+              >
+              <span>2.99</span>
+            </div>
+            <div class="col-md-3">
+              <span class="activo">1</span>
+              <img src="src/assets/images/img-scroll/1.jpg" />
+              <div class="online"></div>
+              <a class="nome-vendedor" href="profile-provider"
+                >Osvaldo Cariege</a
+              >
+              <span>2.99</span>
+            </div>
+            <div class="col-md-3">
+              <span class="activo">1</span>
+              <img src="src/assets/images/img-scroll/1.jpg" />
+              <div class="online"></div>
+              <a class="nome-vendedor" href="profile-provider"
+                >Osvaldo Cariege</a
+              >
+              <span>2.99</span>
+            </div>
+            <div class="col-md-3">
+              <span class="activo">1</span>
+              <img src="src/assets/images/img-scroll/1.jpg" />
+              <div class="online"></div>
+              <a class="nome-vendedor" href="profile-provider"
+                >Osvaldo Cariege</a
+              >
+              <span>2.99</span>
+            </div>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-md-3" >
-                <span class="activo">1</span>
-                <img src="src/assets/images/img-scroll/1.jpg" />
-                <div class="online"></div>
-                <a class="nome-vendedor" href="profile-provider">Osvaldo Cariege</a>
-                <span>2.99</span> 
-            </div>
-            <div class="col-md-3">
-                <span class="activo">1</span>
-                <img src="src/assets/images/img-scroll/1.jpg" />
-                <div class="online"></div>
-                <a class="nome-vendedor" href="profile-provider">Osvaldo Cariege</a>
-                <span>2.99</span> 
-            </div>
-            <div class="col-md-3">
-                <span class="activo">1</span>
-                <img src="src/assets/images/img-scroll/1.jpg" />
-                <div class="online"></div>
-                <a class="nome-vendedor" href="profile-provider">Osvaldo Cariege</a>
-                <span>2.99</span> 
-            </div>
-            <div class="col-md-3">
-                <span class="activo">1</span>
-                <img src="src/assets/images/img-scroll/1.jpg" />
-                <div class="online"></div>
-                <a class="nome-vendedor" href="profile-provider">Osvaldo Cariege</a>
-                <span>2.99</span> 
-            </div>
-        </div>
-    </div>
-</section>
+      </section>
     </div>
   </div>
 </section>
@@ -129,4 +141,3 @@
   </ul>
 </nav>
 {include="shared/Footer/footer"}
-
