--- a/src/views/shared/Header/header.html
+++ b/src/views/shared/Header/header.html
@@ -2,7 +2,7 @@
 
 <!--Barra de navegação-->
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a href="home" class="navbar-brand logo">
+  <a href="/bioloOnline/" class="navbar-brand logo">
     <img
       src="/bioloOnline/src/assets/images/logo-44x44.png"
       class="img-responsive"
@@ -38,15 +38,15 @@
 
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="products"
+        <a class="nav-link" href="/bioloOnline/products"
           >Produtos <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="providers">Vendedores</a>
+        <a class="nav-link" href="/bioloOnline/providers">Vendedores</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="cart">Carrinho</a>
+        <a class="nav-link" href="/bioloOnline/cart">Carrinho</a>
       </li>
 
       {if="!$provider"}
@@ -54,7 +54,7 @@
       <li class="nav-item">
         <a
           class="nav-link btn btn-danger btn-login"
-          href="login-admin"
+          href="/bioloOnline/login-admin"
           style="padding: 10px 30px !important"
           >Login</a
         >
@@ -62,7 +62,7 @@
       <li class="nav-item">
         <a
           class="nav-link btn btn-warning btn-conta"
-          href="create-account"
+          href="/bioloOnline/create-account"
           style="padding: 10px 30px"
           >Criar conta</a
         >
@@ -73,7 +73,7 @@
       <li class="nav-item">
         <a
           class="nav-link btn btn-danger btn-login"
-          href="provider-admin"
+          href="/bioloOnline/provider-admin"
           style="padding: 10px 30px !important"
           >Meu Pérfil</a
         >
@@ -81,7 +81,7 @@
       <li class="nav-item">
         <a
           class="nav-link btn btn-warning btn-conta"
-          href="logout-admin"
+          href="/bioloOnline/logout-admin"
           style="
             padding: 10px 30px;
             border: none !important;
