previews details of product

--- a/src/views/admin/provider-admin.html
+++ b/src/views/admin/provider-admin.html
@@ -136,9 +136,7 @@
                 <a href="/bioloOnline/product/product/{$value.produto_id}/edit"
                   >Editar</a
                 >
-                <a
-                  href="/bioloOnline/product/{$value.produto_id}/delete"
-                  class=""
+                <a href="/bioloOnline/product/{$value.produto_id}/delete"
                   >Eliminar</a
                 >
               </div>
