--- a/src/assets/css/produtos.css
+++ b/src/assets/css/produtos.css
@@ -5,21 +5,36 @@
   
 }
 
+
+.card{
+    width: 200px !important;
+    height: 400px;
+}
+
 img{
     max-width: 100%;
 }
-   #detalhe-produtos{
-        margin-top: 70px;
-        margin-bottom: 90px;
+   .produto-detalhe-container{
+        margin-top: 80px !important;
+        margin-bottom: 200px !important;
         color: #fff;
         
         
       
     }
+    .foto-produto-vendedor{
+        display: flex !important;
+    }
+    .foto-produto-vendedor img{
+        width: 120px !important;
+        height: 120px;
+        border-radius: 50%;
+        margin: 10px;
+    }
     #detalhe-produtos > .container .img-produto{
         border-right: none;
        
-        height: 90vh;
+        height: 70vh !important;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -76,11 +91,12 @@ img{
 
 #detalhe-produtos{
     color: #fff;
+    margin: 50px 0px;
 }
 #detalhe-produtos > .container .img-produto{
     border-right: 1px solid #474747;
    
-    height: 90vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -338,7 +354,7 @@ img{
 /*--------RODAPE---------------*/
 
 footer{
-    margin-top: 50px !important;
+    margin-top: 100px !important;
 }
 footer ul{
     list-style: none !important;
