--- a/src/views/product-detail.html
+++ b/src/views/product-detail.html
@@ -36,6 +36,7 @@
         >
           <strong style="font-size: 20px">Preço: {$value.preco} Kz</strong>
           <p>{$value.email}</p>
+          <span>{$value.contacto}</span>
         </div>
         <p
           class="descricao-detalhe-produto d-flex justify-content-center align-items-center text-center"
